# clang-op-translator

./: .gitignore  CMakeLists.txt  OP2RefactoringTool.hpp  OP2WriteableRefactoringTool.hpp  OPDataRegister.cpp  OPDataRegister.hpp  OPParLoopData.cpp  OPParLoopData.h  ParLoopHandler.cpp  ParLoopHandler.h  Readme.md  op2.cpp  op_par_loop.cpp  op_par_loop.h  utils.cpp  utils.h
doc/: impl.tex  main.tex
generator/: ASTMatchersExtension.h  BaseKernelHandler.cpp  BaseKernelHandler.h  GeneratorBase.hpp  MasterkernelGenerator.hpp  OMPKernelHandler.cpp  OMPKernelHandler.h  OMPRefactoringTool.cpp  OMPRefactoringTool.h  SeqKernelHandler.cpp  SeqKernelHandler.h  SeqRefactoringTool.cpp  SeqRefactoringTool.h  VecDirectUserFuncRefTool.hpp  VecKernelHandler.cpp  VecKernelHandler.h  VecRefactoringTool.h  handler.hpp
generator_example/: KernelGeneratorSkeleton.cpp  KernelGeneratorSkeleton.hpp  KernelHandlerSkeleton.hpp
generators/: BaseKernelHandler.cpp  BaseKernelHandler.h  GeneratorBase.hpp  MasterkernelGenerator.hpp  OMPKernelHandler.cpp  OMPKernelHandler.h  OMPRefactoringTool.cpp  OMPRefactoringTool.h  SeqKernelHandler.cpp  SeqKernelHandler.h  SeqRefactoringTool.cpp  SeqRefactoringTool.h  handler.hpp
op2_ext/: op_cuda_reduction_supp.h
skeletons/: skeleton_OMP4_kernels.cpp  skeleton_basic.cpp  skeleton_direct_OMP4_kernel.cpp  skeleton_direct_kernel.cpp  skeleton_direct_kernel.cu  skeleton_direct_veckernel.cpp  skeleton_kernel.cpp  skeleton_kernel.cu  skeleton_kernels.cu  skeleton_omp4kernels.cpp  skeleton_seqdirkernel.cpp  skeleton_seqkernel.cpp  skeleton_veckernel.cpp  skeleton_veckernels.cpp
skeletons/cuda/: skeleton_direct_kernel.cu  skeleton_global_kernel.cu  skeleton_hierarchical_inc_kernel.cu  skeleton_hierarchical_kernel.cu
skeletons/ops/seq/: skeleton_seq.cpp
src/: AppFileRefactoringTool.cpp  AppFileRefactoringTool.hpp  AppFileTransformations.cpp  AppFileTransformations.hpp  OP2RefactoringTool.cpp  OP2RefactoringTool.hpp  OPDataRegister.hpp  ParLoopHandler.cpp  ParLoopHandler.h  ParLoopHandler.hpp  checkTransformations.hpp  geneareKernels.h  op-check.cpp  op-check.hpp  op2.cpp
src/core/: OP2WriteableRefactoringTool.hpp  OPParLoopData.cpp  OPParLoopData.h  OPWriteableRefactoringTool.hpp  clang_op_translator_core.h  op2_clang_core.h  utils.h
src/generators/: GeneratorFactory.h  MasterkernelGenerator.hpp  generator.hpp
src/generators/common/: BaseKernelHandler.cpp  BaseKernelHandler.h  CommonTransformations.hpp  GeneratorBase.hpp  LoopGenerator.hpp  globals_header_generator.hpp  handler.hpp
src/generators/cuda/: CUDAMasterKernelHandler.h  CudaKernelHandler.cpp  CudaKernelHandler.h  CudaRefactoringTool.h
src/generators/cuda/soa/: UserFuncTransformator.hpp
src/generators/openmp/: OMPKernelHandler.cpp  OMPKernelHandler.h  OMPRefactoringTool.h
src/generators/openmp4/: OMP4KernelHandler.cpp  OMP4KernelHandler.h  OMP4MasterKernelHandler.h  OMP4RefactoringTool.h  OMP4UserFuncRefTool.hpp  OMP4UserFuncTransformator.hpp
src/generators/sequential/: SeqKernelHandler.cpp  SeqKernelHandler.h  SeqRefactoringTool.h
src/generators/vectorization/: VecDirectUserFuncRefTool.hpp  VecKernelHandler.cpp  VecKernelHandler.h  VecRefactoringTool.h  VecUserFuncRefTool.hpp
